--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+# NODE_ENV=development #local development with HTTP
+NODE_ENV=production #when deploying to digital ocean with HTTPS
 MONGODB_URI_LOCAL=mongodb://localhost:27017/exercise-library
 MONGODB_URI=mongodb+srv://admin:GFJntIHEqVQDxQ7Y@cluster0.0bivl79.mongodb.net/exercise-library?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_jwt_secret_here
