--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 NODE_ENV=production
 MONGODB_URI_LOCAL=mongodb://localhost:27017/exercise-library
 MONGODB_URI=mongodb+srv://admin:GFJntIHEqVQDxQ7Y@cluster0.0bivl79.mongodb.net/exercise-library?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=your_jwt_secret_here
+# JWT_SECRET=your_jwt_secret_here
 JWT_ACCESS_SECRET=your_access_secret_here
 JWT_REFRESH_SECRET=your_refresh_secret_here
 JWT_ACCESS_EXPIRATION=15m
