--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
+    "start:monitor": "nodemon -r newrelic server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
@@ -17,7 +18,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.2"
+    "mongoose": "^8.5.2",
+    "newrelic": "^12.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
