--- a/.env
+++ b/.env
@@ -7,3 +7,8 @@ JWT_ACCESS_SECRET=your_access_secret_here
 JWT_REFRESH_SECRET=your_refresh_secret_here
 JWT_ACCESS_EXPIRATION=15m
 JWT_REFRESH_EXPIRATION=7d
+
+
+# NEW_RELIC_APP_NAME=Gym-app
+# NEW_RELIC_LICENSE_KEY=eu01xxcd8df486813c32d2c53f523a45FFFFNRAL 
+# node -r newrelic YOUR_MAIN_FILENAME.js
