environment variables test

--- a/.env
+++ b/.env
@@ -8,6 +8,9 @@ JWT_REFRESH_SECRET=your_refresh_secret_here
 JWT_ACCESS_EXPIRATION=15m
 JWT_REFRESH_EXPIRATION=7d
 
+DEV_ORIGIN=http://192.168.178.42:3000
+PROD_ORIGIN=https://walrus-app-lqhsg.ondigitalocean.app
+
 
 # NEW_RELIC_APP_NAME=Gym-app
 # NEW_RELIC_LICENSE_KEY=eu01xxcd8df486813c32d2c53f523a45FFFFNRAL 
