--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
-    "newrelic": "^12.3.0"
+    "newrelic": "^12.3.0",
+    "nodemailer": "^6.9.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
